Create clear command.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-[] Добавить команду очистки канала
+[х] Добавить команду очистки текстового канала
 [] Отправка сообщений от лица бота
 [] Просмотреть сколько игроков играет в определенную игру
 [] Добавить логи действий
