Fix access on commands.

--- a/TODO
+++ b/TODO
@@ -1,12 +1,15 @@
 [х] Добавить команду очистки текстового канала
+[] Добавить проверку пользователей
+[] Добавить список комманд и отправление по уровню доступа
+[] Парсинг данных с файла
 [] Отправка сообщений от лица бота
-[] Просмотреть сколько игроков играет в определенную игру
-[] Добавить логи действий
-[] Оповещения о стриме
+[] Добавить логи
 [] Модераторские фишки (бан, кик, предупреждения, отключение чата и войса)
+[] Пасхальные сообщения
+[] Просмотреть сколько игроков играет в определенную игру
+[] Оповещения о стриме
 [] Добавить хранение информации о участниках (имя, пол, ?день рождения)
 [] Придумать систему votemute
 [] Система наград и опыта
 [] Система развлечений
 [] Воспроизведение музыки
-[] Пасхальные сообщения
