Add admin checker.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 [х] Добавить команду очистки текстового канала
-[] Добавить проверку пользователей
+[x] Добавить проверку пользователей
 [] Добавить список комманд и отправление по уровню доступа
 [] Парсинг данных с файла
 [] Отправка сообщений от лица бота
