--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 [х] Добавить команду очистки текстового канала
 [x] Добавить проверку пользователей
-[] Добавить список комманд и отправление по уровню доступа
-[] Парсинг данных с файла
+[x] Добавить список комманд и отправление по уровню доступа
 [] Отправка сообщений от лица бота
+[] Парсинг данных с файла
 [] Добавить логи
 [] Модераторские фишки (бан, кик, предупреждения, отключение чата и войса)
 [] Пасхальные сообщения
