Create send command.

--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 [х] Добавить команду очистки текстового канала
 [x] Добавить проверку пользователей
 [x] Добавить список комманд и отправление по уровню доступа
-[] Отправка сообщений от лица бота
+[x] Отправка сообщений от лица бота
+[] Команда для описания команды
 [] Парсинг данных с файла
 [] Добавить логи
 [] Модераторские фишки (бан, кик, предупреждения, отключение чата и войса)
