--- a/TODO
+++ b/TODO
@@ -2,15 +2,15 @@
 [x] Добавить проверку пользователей
 [x] Добавить список комманд и отправление по уровню доступа
 [x] Отправка сообщений от лица бота
-[] Добавить логи
+[x] Добавить логи
 [] Команда для описания команды
 [] Парсинг данных с файла
+[] Добавить хранение информации о участниках (имя, пол, ?день рождения)
 [] Модераторские фишки (бан, кик, предупреждения, отключение чата и войса)
 [] Пасхальные сообщения
+[] Воспроизведение музыки
 [] Просмотреть сколько игроков играет в определенную игру
 [] Оповещения о стриме
-[] Добавить хранение информации о участниках (имя, пол, ?день рождения)
 [] Придумать систему votemute
 [] Система наград и опыта
 [] Система развлечений
-[] Воспроизведение музыки
